<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_files_permission_name">Acceso a tus archivos de tu dispositivo</string>
    <string name="accessibility_service_description">Instalación automática del programa sin ninguna operación del usuario</string>
    <string name="action_large_text">Hace ya unos días fue presentado por Xiaomi su nuevo terminal, el Mi6, que ni decepcionaba ni sorprendía. Y lo cierto es que cada vez nos encontramos más en las presentaciones de móviles con este fenómeno: los fabricantes no logran sorprender.</string>
    <string name="action_settings">Configuraciones</string>
    <string name="activate_account_action">Activar mi cuenta vía SMS</string>
    <string name="activate_account_message1">Activar mi cuenta vía SMS</string>
    <string name="activate_account_message2">Para activar su usuario introduzca el código que se le ha enviado a su teléfono vía SMS</string>
    <string name="activate_account_title">Activar</string>
    <string name="actualizaciones">Actualizaciones</string>
    <string name="all_app_tab_title">Todas</string>
    <string name="all_data_loaded_message">Todos los datos fueron cargados</string>
    <string name="android_animations_lib_name">AndroidAnimations</string>
    <string name="aplicacion">Aplicación</string>
    <string name="app_name">Apklis</string>
    <string name="app_name_library">Easy_SharedPreference_Library</string>
    <string name="app_notif_update">Apklis %1s actualización</string>
    <string name="app_title">Aplicaciones</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="best_applications_title">Mejores apps</string>
    <string name="best_games_title">Mejores juegos</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bt_sugges">Sugerir aplicación</string>
    <string name="buy">COMPRAR</string>
    <string name="buy_app">Aplicación comprada</string>
    <string name="cancel_btn_title">Cancelar</string>
    <string name="cancel_title">Cancelar</string>
    <string name="cantidad_de_descargas">Cantidad de descargas</string>
    <string name="categor_a">Categoría</string>
    <string name="categories">Categorías</string>
    <string name="category">Categoría</string>
    <string name="cause">Motivo</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="change_pass">Cambiar contraseña</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chek_connection">VOLVER A INTENTAR</string>
    <string name="collections_title">Colecciones</string>
    <string name="collections_uppercase_title">COLLECCIONES</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="cuban_games_applications_title">Apps y juegos cubanos</string>
    <string name="date">Fecha:</string>
    <string name="default_filedownloader_notification_content">FileDownloader is running.</string>
    <string name="default_filedownloader_notification_title">FileDownloader</string>
    <string name="delete_title">ELIMINAR</string>
    <string name="description">Descripción:</string>
    <string name="details_app_tab_title">Detalles</string>
    <string name="dialog_neutral_button">Neutral</string>
    <string name="dialog_no_button">No</string>
    <string name="dialog_ok_button">Ok</string>
    <string name="dialog_yes_button">Yes</string>
    <string name="download_complete">Descarga completada!</string>
    <string name="download_init">DESCARGA</string>
    <string name="downloading">Descargando…</string>
    <string name="easy_native_dialog_btn_cancel">Cancel</string>
    <string name="easy_native_dialog_btn_ok">OK</string>
    <string name="easy_native_dialog_btn_option">Option</string>
    <string name="edit_title">EDITAR</string>
    <string name="eliminar_paquetes_tras_la_instalaci_n">Eliminar paquetes tras la instalación</string>
    <string name="error_account_only_one_allowed">Solo una cuenta es permitida</string>
    <string name="error_activation_code">El código no es válido</string>
    <string name="error_autentication">Debe estar autenticado</string>
    <string name="error_autentication_title">El usuario o la contraseña son incorrectos</string>
    <string name="error_change_pass">Contraseña incorrecta o no coinciden las nuevas</string>
    <string name="error_field">Este campo no puede estar vacío</string>
    <string name="error_field_radio">Debe seleccionar al alguno</string>
    <string name="error_input_empty">Este campo es requerido</string>
    <string name="error_password">Inválido</string>
    <string name="error_phone_number">Número inválido</string>
    <string name="error_repeat_password">Las contraseñas no coinciden</string>
    <string name="error_server_conection">Lo sentimos, no se pudo comunicar con el servidor</string>
    <string name="error_url">Url no valida</string>
    <string name="error_username">Inválido</string>
    <string name="fashion_game_applications_title">Apps y juegos de moda</string>
    <string name="first_screen">Con Apklis puedes tener\n acceso a tus aplicaciones\npreferidas</string>
    <string name="forget_password_account_action">¿Ha olvidado la contraseña?</string>
    <string name="forgot_password">Introduzca su número telefónico en el siguiente campo y se le enviará un código para actualizar su contraseña vía SMS</string>
    <string name="game_title">Juegos</string>
    <string name="get_access_write">Acceso al almacenamiento</string>
    <string name="get_account_permission_name">Acceso a cuentas</string>
    <string name="guardar_cambios">Guardar perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_activation_code">Código de activación</string>
    <string name="hint_code">Código</string>
    <string name="hint_first_name">Nombre</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password_new">Contraseña nueva</string>
    <string name="ignoreInstall">Solo descargar la aplicación</string>
    <string name="instalaci_n_autom_tica">Instalación automática</string>
    <string name="isgnoreSdk">Ignorar versión de Android</string>
    <string name="juego">Juego</string>
    <string name="latest_updates_title">Últimas actualizaciones</string>
    <string name="name_packageName">Nombre o packagename</string>
    <string name="opinion_dialog_comment_hint">Escriba su opinión aquí …</string>
    <string name="opinion_dialog_description">¿Cómo ustéd califica esta aplicación?</string>
    <string name="opinion_dialog_title">Opinión</string>
    <string name="recent_releases_title">Lanzamientos recientes</string>
    <string name="recibir_una_notificaci_n_cuando_halla_actualizaciones_disponibles_para_tus_aplicaciones">Recibir una notificación cuando haya actualizaciones disponibles para tus aplicaciones</string>
    <string name="recommended_applications_title">Apps recomendadas</string>
    <string name="ruta_descargas">Ruta descargas</string>
    <string name="text_list_apps">Lista de deseos</string>
    <string name="text_login">Iniciar sesión</string>
    <string name="text_sugges">Sugerir Aplicaciones</string>
    <string name="text_user_apps">Mis descargas</string>
    <string name="title_about">Acerca de</string>
    <string name="title_config">Configuración</string>
    <string name="title_facebook">Facebook</string>
    <string name="title_my_account_uppercase">MI CUENTA</string>
    <string name="title_my_info_uppercase">INFORMACIÓN</string>
    <string name="title_siguenos_uppercase">SÍGUENOS EN</string>
    <string name="title_telegram">Telegram</string>
    <string name="title_term_condition">Términos y Condiciones</string>
    <string name="title_twitter">Twitter</string>
    <string name="title_xapklis">Mis Apklis</string>
    <string name="title_xapklis_uppercase">APKLIS</string>
    <string name="tools_utilities_title">Herramientas y utilidades</string>
    <string name="url">URL</string>
</resources>