<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:visible="true"
        android:title="@string/title_my_account_uppercase">
        <menu>
            <group android:id="@+id/nav_group_account">
                <item
                    android:icon="@drawable/ic_user_account"
                    android:id="@+id/nav_account"
                    android:title="@string/text_login"/>
                <item
                    android:icon="@drawable/ic_user_apps"
                    android:id="@+id/nav_user_apps"
                    android:visible="false"
                    android:title="@string/text_user_apps"/>
                <item
                    android:icon="@drawable/sugerir"
                    android:id="@+id/nav_sugges_apps"
                    android:visible="false"
                    android:title="@string/text_sugges"/>
                <item
                    android:icon="@mipmap/ic_list_deseos"
                    android:id="@+id/nav_wish_lis"
                    android:visible="false"
                    android:title="@string/text_list_apps"/>
            </group>
        </menu>
    </item>
    <item
        android:visible="true"
        android:title="@string/collections_uppercase_title">
        <menu>
            <group android:id="@+id/nav_group_collections">
                <item
                    android:icon="@drawable/ic_recommended_applications"
                    android:id="@+id/nav_recommended_applications"
                    android:title="@string/recommended_applications_title"/>
                <item
                    android:icon="@drawable/ic_cuban_games_applications"
                    android:id="@+id/nav_cuban_games_applications"
                    android:title="@string/cuban_games_applications_title"/>
                <item
                    android:icon="@drawable/ic_latest_updates"
                    android:id="@+id/nav_latest_updates"
                    android:title="@string/latest_updates_title"/>
                <item
                    android:icon="@drawable/ic_fashion_game_applications"
                    android:id="@+id/nav_fashion_game_applications"
                    android:title="@string/fashion_game_applications_title"/>
                <item
                    android:icon="@drawable/ic_recent_releases"
                    android:id="@+id/nav_recent_releases"
                    android:title="@string/recent_releases_title"/>
                <item
                    android:icon="@drawable/ic_best_applications"
                    android:id="@+id/nav_best_applications"
                    android:title="@string/best_applications_title"/>
                <item
                    android:icon="@drawable/ic_best_games"
                    android:id="@+id/nav_best_games"
                    android:title="@string/best_games_title"/>
                <item
                    android:icon="@drawable/ic_tools_utilities"
                    android:id="@+id/nav_tools_utilities"
                    android:title="@string/tools_utilities_title"/>
            </group>
        </menu>
    </item>
    <item
        android:visible="true"
        android:title="@string/title_xapklis_uppercase">
        <menu>
            <group android:id="@+id/nav_group_xapklis">
                <item
                    android:icon="@drawable/ic_logo_apklis"
                    android:id="@+id/nav_xapklis"
                    android:title="@string/title_xapklis"/>
            </group>
        </menu>
    </item>
    <item
        android:visible="true"
        android:title="@string/title_siguenos_uppercase">
        <menu>
            <group android:id="@+id/nav_group_siguenos">
                <item
                    android:icon="@drawable/ic_facebook"
                    android:id="@+id/nav_facebook"
                    android:title="@string/title_facebook"/>
                <item
                    android:icon="@drawable/ic_twitter"
                    android:id="@+id/nav_twitter"
                    android:title="@string/title_twitter"/>
                <item
                    android:icon="@drawable/ic_telegram"
                    android:id="@+id/nav_telegram"
                    android:title="@string/title_telegram"/>
            </group>
        </menu>
    </item>
    <item
        android:visible="true"
        android:title="@string/title_my_info_uppercase">
        <menu>
            <group android:id="@+id/nav_group_info">
                <item
                    android:icon="@drawable/ic_tools_utilities"
                    android:id="@+id/nav_config"
                    android:title="@string/title_config"/>
                <item
                    android:icon="@drawable/ic_term_condition"
                    android:id="@+id/nav_term_condition"
                    android:title="@string/title_term_condition"/>
                <item
                    android:icon="@drawable/ic_about"
                    android:id="@+id/nav_about"
                    android:title="@string/title_about"/>
            </group>
        </menu>
    </item>
</menu>
