<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/md_grey100"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/llPickD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/tvDownlPath"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ruta_descargas"/>
        <TextView
            android:textSize="12sp"
            android:id="@+id/tvDownlPathDesc"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/llDiv1"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:layout_below="@+id/llPickD"/>
    <RelativeLayout
        android:orientation="vertical"
        android:id="@+id/llAutoInstall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llDiv1">
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/tvAutoInstall"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instalaci_n_autom_tica"/>
        <Switch
            android:id="@+id/swAutoInstall"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/llDiv2"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:layout_below="@+id/llAutoInstall"/>
    <RelativeLayout
        android:orientation="vertical"
        android:id="@+id/llDeleteApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llDiv2">
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/tvDeleteApp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eliminar_paquetes_tras_la_instalaci_n"/>
        <Switch
            android:id="@+id/swAutoDelete"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/llDiv3"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:layout_below="@+id/llDeleteApp"/>
    <RelativeLayout
        android:id="@+id/llNotifUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llDiv3">
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/tvNotfUpdate"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actualizaciones"/>
        <TextView
            android:textSize="12sp"
            android:id="@+id/tvNotfUpdateDescrp"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="110dp"
            android:text="@string/recibir_una_notificaci_n_cuando_halla_actualizaciones_disponibles_para_tus_aplicaciones"
            android:layout_below="@+id/tvNotfUpdate"/>
        <Switch
            android:id="@+id/swNotfUpdate"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/llDiv4"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:layout_below="@+id/llNotifUpdate"/>
    <RelativeLayout
        android:id="@+id/rlIgnoreUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llDiv4">
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/tvIgnoreSDK"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isgnoreSdk"/>
        <Switch
            android:id="@+id/swIgnoreSDK"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/llDiv5"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:layout_below="@+id/rlIgnoreUpdate"/>
    <RelativeLayout
        android:id="@+id/rlIgnoreInstall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llDiv5">
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/tvIgnoreInstall"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ignoreInstall"/>
        <Switch
            android:id="@+id/swIgnoreInstall"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <com.startapp.sdk.ads.banner.Banner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
