<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorAppDetailsBackground"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorTextPrimary"
        android:gravity="center_horizontal"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/opinion_dialog_title"/>
    <TextView
        android:textSize="14sp"
        android:textColor="@color/colorTextPrimary"
        android:gravity="center_horizontal"
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/opinion_dialog_description"/>
    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:srb_borderColor="@color/colorRatingFilled"
        app:srb_drawBorderEnabled="false"
        app:srb_fillColor="@color/colorRatingFilled"
        app:srb_numberOfStars="5"
        app:srb_starBackgroundColor="@color/colorRatingBackground"
        app:srb_starBorderWidth="0.01"
        app:srb_starCornerRadius="1"
        app:srb_starSize="36dp"
        app:srb_starsSeparation="8dp"
        app:srb_stepSize="1"/>
    <EditText
        android:textSize="16sp"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextInputDark"
        android:gravity="top"
        android:id="@+id/comment"
        android:background="@drawable/bg_review_edittext"
        android:padding="@dimen/margin_pre_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/opinion_dialog_comment_hint"
        android:lines="5"
        android:inputType="textMultiLine"
        android:textCursorDrawable="@null"/>
</LinearLayout>
