<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/linear_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/_15sdp"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/tv_title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_sugges"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_title">
        <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp">
            <RadioGroup
                android:orientation="vertical"
                android:id="@+id/myRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/sound"
                android:layout_below="@+id/text">
                <RadioButton
                    android:id="@+id/rb_aplicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aplicacion"/>
                <RadioButton
                    android:id="@+id/rb_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/juego"/>
            </RadioGroup>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/linear_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/myRadioGroup">
                <android.support.design.widget.TextInputLayout
                    android:theme="@style/EditTextHint"
                    android:textColorHint="@color/md_black"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/til_name_package"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="false"
                    app:errorTextAppearance="@style/error_appearance">
                    <EditText
                        android:theme="@style/EditTextHint"
                        android:textStyle="italic"
                        android:textColor="@color/md_black"
                        android:textColorHint="@color/md_black"
                        android:id="@+id/et_name_sugges"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_packageName"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:theme="@style/EditTextHint"
                    android:textColorHint="@color/md_black"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/til_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="false"
                    app:errorTextAppearance="@style/error_appearance">
                    <EditText
                        android:theme="@style/EditTextHint"
                        android:textStyle="italic"
                        android:textColor="@color/md_black"
                        android:textColorHint="@color/md_black"
                        android:id="@+id/et_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/url"
                        android:inputType="textWebEmailAddress"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:theme="@style/EditTextHint"
                    android:textColorHint="@color/md_black"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/til_cause"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="false"
                    app:errorTextAppearance="@style/error_appearance">
                    <EditText
                        android:theme="@style/EditTextHint"
                        android:textStyle="italic"
                        android:textColor="@color/md_black"
                        android:textColorHint="@color/md_black"
                        android:id="@+id/et_cause"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cause"/>
                </android.support.design.widget.TextInputLayout>
                <com.startapp.sdk.ads.banner.Banner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/linear_buttom"
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_below="@+id/linear_textView">
                <Button
                    android:textColor="@color/material_white"
                    android:id="@+id/bt_cancel_sugges"
                    android:background="@drawable/bg_btn_cancel_sugges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="Cancelar"
                    android:layout_weight="1.5"/>
                <Button
                    android:textColor="@color/material_white"
                    android:id="@+id/bt_sugges"
                    android:background="@drawable/bg_btn_sugerir_sugges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_sugges"
                    android:layout_weight="1.5"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
